# featureflags-rs

./: .dockerignore  .gitignore  Cargo.toml  Readme.md  roadmap.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/client-py/: Cargo.toml  README.md  pyproject.toml
apps/client-py/src/: lib.rs
docker/: Cargo.toml.server  Dockerfile
libs/core/: Cargo.toml
libs/core/src/: eval.rs  lib.rs  models.rs
