[workspace]
members = [
    "apps/cli",
    "apps/server",
    "libs/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Freddy Garcia <github.woqtz@mailer.me>"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
