[package]
name = "featureflags-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ffctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
featuresflags-core = { path = "../../libs/core" }
